# fetchbrowser

./: .gitignore  Cargo.toml  LICENSE  README.md  install-cn.ps1  install.ps1
src/: builds.rs  common.rs  history.rs  main.rs  platform.rs  utils.rs  version.rs
src/chromium/: builds.rs  download.rs  history.rs  mod.rs
src/ff/: mod.rs
src/firefox/: mod.rs
