[package]
name = "fetchbrowser"
version = "0.1.1"
edition = "2021"
authors = ["hamflx <a@hamflx.cn>"]
license = "MIT"

[[bin]]
name = "fb"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
bytes = "1.4.0"
clap = { version = "4.1.1", features = ["derive"] }
compress-tools = "0.14.0"
reqwest = { version = "0.11.13", features = ["blocking", "socks"] }
select = "0.6.0"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0"
zip = "0.6.3"
